@@ -1,3 +1,12 @@
+Thu Mar  1 19:36:47 UTC 2007  Wallace Zhang  <zhang_w@ociweb.com>
+
+        * tao/DynamicInterface/AMH_DSI_Response_Handler.cpp:
+        * tao/DynamicInterface/DII_Reply_Handler.h:
+        * tao/DynamicInterface/DII_Reply_Handler.cpp:
+
+          Removed use of deprecated macros. Changed to use c++ cast.
+          Removed a check for gcc > 2.8 since it is not supported.
+
 Thu Mar  1 19:14:18 UTC 2007  Wallace Zhang  <zhang_w@ociweb.com>
 
         * tao/DynamicInterface/AMH_DSI_Response_Handler.h:
